--- a/html/home.html
+++ b/html/home.html
@@ -108,7 +108,7 @@
     <script>
         function seemore()
         {
-            window.location.href = 'template.html'
+            window.location.href = 'loginfinal.html'
         }
         let currentSlide = 0;
         const slides = document.querySelectorAll('#slider img');
