--- a/html/signup.html
+++ b/html/signup.html
@@ -26,9 +26,10 @@
                 <span>Confirm Password</span>
             </div>
             <div class="links">
-                <a href="#">Forgot Password</a>
+                <p style="color:white">Already have an account? -></p>
                 <a href="loginfinal.html">Log in</a>
             </div>
+        
             <input type="submit" value="Sign Up">
         </form>
     </div>
