--- a/html/output.html
+++ b/html/output.html
@@ -169,11 +169,10 @@
     var address = localStorage.getItem("address");
     var email = localStorage.getItem("email");
 
-    // Update the DOM with retrieved values
     document.getElementById("name").innerText = name;
     document.getElementById("surname").innerText = surname;
     document.getElementById("title_main").innerText = title_main;
-    document.getElementById("address").innerText = address; // Corrected from "location" to "address"
+    document.getElementById("address").innerText = address; 
     document.getElementById("phone").innerText = phone;
     document.getElementById("email").innerText = email;
 </script>
